# gpt-from-scratch

./: README.md  pyproject.toml
origin/: gpt_dev.ipynb  gpt_dev.slides.html
